src/testData/analysis/octalEscapes.cr
#EXTRA_ATTRIBUTE: CrOctalEscapeElement.getEscapedChar

"<warning descr="">\5</warning>"

"<warning descr="*">\52</warning>"

"<warning descr="ÿ">\377</warning>"

"<error descr="Octal value may not exceed 377 (decimal 256)"><warning descr="Ā">\400</warning></error>"

"<error descr="Octal value may not exceed 377 (decimal 256)"><warning descr="ŀ">\500</warning></error>"

"<warning descr="ÿ">\0377</warning>"

"<error descr="Octal value may not exceed 377 (decimal 256)"><warning descr="ʜ">\1234</warning></error>"

"<warning descr="@">\0100</warning>1"